RESOLVED FIXED89510
Layout test gamepad/gamepad-polling-access.html timing out on some bots
https://bugs.webkit.org/show_bug.cgi?id=89510
Summary Layout test gamepad/gamepad-polling-access.html timing out on some bots
Kenneth Russell
Reported 2012-06-19 13:52:53 PDT
Attachments
Patch (3.44 KB, patch)
2013-03-12 16:57 PDT, James Robinson
no flags
Kenneth Russell
Comment 1 2012-06-19 15:01:42 PDT
Kenneth Russell
Comment 2 2012-06-19 15:02:20 PDT
Accidentally closed the bug with the above TestExpectations update. Reopening.
James Robinson
Comment 3 2013-03-12 16:54:11 PDT
It's not timing out, it's crashing. The call to std::copy(..., )'s second parameter is null because it's calling .begin() on an WTF::Vector<> with 0 size.
James Robinson
Comment 4 2013-03-12 16:57:11 PDT
*** Bug 112209 has been marked as a duplicate of this bug. ***
James Robinson
Comment 5 2013-03-12 16:57:26 PDT
Kenneth Russell
Comment 6 2013-03-12 17:08:27 PDT
Comment on attachment 192834 [details] Patch Thanks for cleaning this up. r=me
WebKit Review Bot
Comment 7 2013-03-12 17:27:58 PDT
Comment on attachment 192834 [details] Patch Clearing flags on attachment: 192834 Committed r145631: <http://trac.webkit.org/changeset/145631>
WebKit Review Bot
Comment 8 2013-03-12 17:28:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.