Fix Gamepad::axes and Gamepad::buttons to avoid calling std::copy(..., ..., 0) https://bugs.webkit.org/show_bug.cgi?id=89510

Patch by James Robinson <jamesr@chromium.org> on 2013-03-12
Reviewed by Kenneth Russell.

Source/WebCore:

WTF::Vector::begin() returns 0 when the vector has length zero. On windows, the debug implementation of
std::copy() is unhappy with 0 as a third parameter even when the first and second parameters are equal.

Covered by gamepad/gamepad-polling-access.html

* Modules/gamepad/Gamepad.cpp:
(WebCore::Gamepad::axes):
(WebCore::Gamepad::buttons):

LayoutTests:

Remove expectation now that test passes.

* platform/chromium/TestExpectations:

Canonical link: https://commits.webkit.org/130523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145631 268f45cc-cd09-0410-ab3c-d52691b4dbfc